# HFEA-Deutschland

./: README.md
zgea/: .gitignore  01_prepare_treasury_yield_curves.ipynb  02_simulate_treasury_bond_fund.ipynb  03_prepare_data_for_analysis.ipynb  04_basic_data_analysis.ipynb  05_modelling_of_letf.ipynb  06_basic_etf_analysis.ipynb  07_backtests_hfea_without_tax.ipynb  08_backtests_hfea_without_tax_gold_vs_cash.ipynb  09_backtest_hfea_without_tax_nasdaq_vs_gold.ipynb  10a_ema_buy_and_sell_strategie_shares.ipynb  10b_ema_buy_and_sell_strategie_bonds.ipynb  10c_ema_buy_and_sell_strategie.ipynb  10d_ema_buy_and_sell_test.ipynb  10e_additional_analysis_requests.ipynb  11_tax_simulation.ipynb  12_crysis_scenarios.ipynb  13_simulate_monthly_rate.ipynb  Addendum_Monte_Carlo_and_transaction_cost_analysis.ipynb  Addendum_Volatility_Decay_Visualization.ipynb  README.md  addtional_Monte_Carlo_and_transaction_cost_analysis.ipynb  requirements.txt  setup.cfg  tox.ini  zgea_diff.txt
zgea/clean_data/: assets.xlsx  bond_funds.xlsx  borrowing_rate.xlsx  ffr.xlsx  hfea_data.xlsx  inflation.xlsx  yield_curve.xlsx
zgea/raw_data/: CPIAUCNS.csv  DGS1.csv  DGS10.csv  DGS20.csv  DGS3.csv  DGS30.csv  DGS5.csv  DGS7.csv  DTLA.csv  FEDFUNDS.csv  FFWSJLOW.csv  IBTA.csv  SXRM.csv  TMFSIM.csv  UPROSIM.csv  USDONTD156N.csv  bogleheads_yield_curves.xlsx  data_source.md  gold_web.xlsx  gold_yearly.xlsx  nasdaq-100-tr_1.csv  nasdaq-100-tr_2.csv  nasdaq-100.csv  s&p500_dividends.csv  s&p500_raw.csv  simba_data.xlsx  us_inflation.csv
zgea/utils/data/: __init__.py  cached.py  download_from_fred.py  download_from_investing.py  download_from_nasdaq.py  merge.py  (+3 more)
(+50 files in other folders)
