[metadata]
name = zgea
version = 0.0.1
author = ZahlGraf
description = tbd
long_description = file: README.md
author_email = tbd
license = MIT

[options]
packages = find:
install_requires =
    appnope
    argon2-cffi
    argon2-cffi-bindings
    asttokens
    attrs
    backcall
    beautifulsoup4
    bleach
    certifi
    cffi
    charset-normalizer
    debugpy
    decorator
    defusedxml
    entrypoints
    et-xmlfile
    executing
    idna
    inflection
    ipykernel
    ipython
    ipython-genutils
    ipywidgets
    jedi
    Jinja2
    json5
    jsonschema
    jupyter-client
    jupyter-core
    jupyterlab-pygments
    lxml
    MarkupSafe
    matplotlib-inline
    mistune
    more-itertools
    multitasking
    nbclient
    nbconvert
    nbformat
    nbmake
    nest-asyncio
    notebook
    numpy
    numpy-financial
    openpyxl
    packaging
    pandas
    pandocfilters
    parso
    pexpect
    pickleshare
    plotly
    prometheus-client
    prompt-toolkit
    psutil
    ptyprocess
    pure-eval
    pycparser
    Pygments
    pyparsing
    pyrsistent
    pytest
    pytest-cov
    python-dateutil
    pytz
    PyYAML
    pyzmq
    Quandl
    requests
    Send2Trash
    six
    soupsieve
    stack-data
    tenacity
    terminado
    testpath
    tornado
    tox
    tqdm
    traitlets
    typeguard
    urllib3
    wcwidth
    webencodings
    yfinance

[semantic_release]
version_variable = version

[options.packages.find]
# exclude data directories from build
exclude = 
    clean_data*
    images*
    raw_data*
